Let user configure table prefix
WARNING: With this commit, you have to update your configuration and your MySQL table names to [configured prefix] + "_changes", "_teachers" and "_authentication".

Fixes #8.

--- a/src/lib/configuration-template.ini
+++ b/src/lib/configuration-template.ini
@@ -15,9 +15,5 @@ User = ""
 Password = ""
 ; The MySQL database name.
 Database = ""
-; The MySQL table name for the changes stuff.
-Table_Changes = "changes"
-; The MySQL table name for the teachers.
-Table_Teachers = "teachers"
-; The MySQL table name for the authentication.
-Table_Authentication = "authentication"
+; A prefix for the MySQL table names.
+Table_Prefix = "lb_0"
