Add default values for MySQL host and database

--- a/src/lib/configuration-template.ini
+++ b/src/lib/configuration-template.ini
@@ -8,12 +8,12 @@
 
 [MySQL]
 ; The host name or IP address of the MySQL databse.
-Host = ""
+Host = "localhost"
 ; The MySQL user name.
 User = ""
 ; The MySQL password.
 Password = ""
 ; The MySQL database name.
-Database = ""
+Database = "legionboard"
 ; A prefix for the MySQL table names.
 Table_Prefix = "lb_0"
