--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,6 +28,19 @@ php-lint:php5.6:
   script:
   - for f in $(find src -name '*.php'); do php -l $f; done
 
+php-lint:php7.0:
+  image: php:7.0
+  stage: test
+  script:
+  - for f in $(find src -name '*.php'); do php -l $f; done
+
+php-lint:php7.2-rc:
+  image: php:7.2-rc
+  stage: test
+  allow_failure: true
+  script:
+  - for f in $(find src -name '*.php'); do php -l $f; done
+
 phpcs:
   <<: *install_composer
   stage: test
@@ -49,5 +62,20 @@ units:php5.6:
   image: php:5.6
   <<: *install_composer
   stage: test
+  script:
+  - vendor/bin/atoum -d src/tests/units
+
+units:php7.0:
+  image: php:7.0
+  <<: *install_composer
+  stage: test
+  script:
+  - vendor/bin/atoum -d src/tests/units
+
+units:php7.2-rc:
+  image: php:7.2-rc
+  <<: *install_composer
+  stage: test
+  allow_failure: true
   script:
   - vendor/bin/atoum -d src/tests/units
