--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "require-dev": {
-        "atoum/atoum": "^3.0",
-        "atoum/visibility-extension": "^1.3",
-        "squizlabs/php_codesniffer": "^3.0"
+        "atoum/atoum": ">=3.1.1",
+        "atoum/visibility-extension": ">=1.3.0",
+        "squizlabs/php_codesniffer": ">=3.0.2"
     }
 }
